[package]
name = "libretune"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
faker_rand = "0.1.1"
futures-util = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.3.3"
thiserror = "2.0.12"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
